--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
           <a href="contacto.html">Contacto</a>
         </nav>
 
+        <nav class="navbarvert">
+        <ul>
+         <li><a href="index.html">Inicio</a></li>
+         <li><a href="Novedades.html">Novedades</a></li>
+        </li><a href="productos.html">Productos</a></li>
+         <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+        </nav>
+
+                       
         <form action="/search" method="GET">
           <input type="text" name="q" placeholder="Buscar" />
           <button type="submit">Buscar</button>
@@ -28,7 +38,7 @@
 
     <section class="hero">
       <div class="hero-content">
-        <h2>
+        <h2 class="subtitulo">
           Mantenete a la vanguardia: Noticias, Tendencias y Tecnología del Riego
         </h2>
       </div>
