--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>INFORIEGO: La actualidad del riego</title>
     <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body class="index">
@@ -23,11 +24,10 @@
         <ul>
          <li><a href="index.html">Inicio</a></li>
          <li><a href="Novedades.html">Novedades</a></li>
-        </li><a href="productos.html">Productos</a></li>
+         <li><a href="productos.html">Productos</a></li>
          <li><a href="contacto.html">Contacto</a></li>
         </ul>
         </nav>
-
                        
         <form action="/search" method="GET">
           <input type="text" name="q" placeholder="Buscar" />
@@ -77,8 +77,11 @@
       y universidades exhibirán sus avances tecnológicos.
     </p>
     <br />
+<section class="expoagro"><
+    <img src="Imagenes/Expoagro.png" alt="expo" width="400" height="600" />
+    <img src="Imagenes/Expoagro2.jpg" alt="expo2" width="400" height="600">
 
-    <img src="Imagenes/Expoagro.png" alt="expo" width="600" height="450" />
+</section>
     <br />
 
     <footer>
